--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     ]
   },
   "peerDependencies": {
-    "three": "^0.111.0"
+    "three": "github:mozillareality/three.js#hubs-patches-133"
   },
   "devDependencies": {
     "@types/webgl2": "0.0.4",
